<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <!-- New to 1.1, https://developer.android.com/reference/android/support/constraint/Barrier 
    
    A Barrier references multiple widgets as input, and creates a virtual guideline based on the 
    most extreme widget on the specified side. For example, a left barrier will align to the left 
    of all the referenced views. -->

    <!-- https://constraintlayout.com/basics/barriers.html -->
    <!-- On the design tab, change the language to Spanish or German.  With the barrier, 
         the right side text (text_view_right_side) will shift to accommodate the longest menu text. --> 

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/my_music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/my_music"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/feed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        tools:text="@string/feed"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/profile"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="@string/settings"/>

    <android.support.constraint.Barrier
        android:id="@+id/barrier7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="textView2,textView1, textView3, textView4"/>

    <TextView
        android:id="@+id/text_view_right_side"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="#DEADBEEF"
        android:paddingTop="28dp"
        android:layout_marginLeft="16dp"
        android:paddingLeft="16dp"
        android:text="@string/random"
        app:layout_constraintStart_toEndOf="@+id/barrier7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/random"/>

</android.support.constraint.ConstraintLayout>
