<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- align the text baseline of views with text with "layout_constraintBaseline_toBaselineOf" -->
    
    <TextView
        android:id="@+id/text_1"
        style="@style/tiny_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:text="@string/text1"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_2"/>

    <TextView
        android:id="@+id/text_2"
        style="@style/big_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:text="@string/text2"
        app:layout_constraintLeft_toRightOf="@+id/text_1"/>
    
    <Button
        android:id="@+id/regular_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/btn_star"
        android:text="@string/text3"
        android:tint="@color/green"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_2"
        app:layout_constraintLeft_toRightOf="@+id/text_2"/>

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_2"
        app:layout_constraintLeft_toRightOf="@+id/regular_button"/>

    <!-- layout_constraintBaseline_toBaselineOf does nothing for ImageButton.  Only works on things that have text -->
    <ImageButton
        android:id="@+id/image_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@android:drawable/btn_star"
        android:tint="@color/yellow"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_2"
        app:layout_constraintLeft_toRightOf="@+id/edit_text"/>


</android.support.constraint.ConstraintLayout>